--- a/index.html
+++ b/index.html
@@ -76,50 +76,62 @@
   <Section class="contact">
     <div class="container">
       <h2>Get In touch with Us</h2>
-      <div class="row100">
-        <div class="col">
-          <div class="inputBox">
-            <input type="text" name="" required="required">
-            <span class="text">First Name</span>
-            <span class="line"></span>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row100">
+            <div class="col">
+              <div class="inputBox">
+                <input type="text" name="" required="required">
+                <span class="text">First Name</span>
+                <span class="line"></span>
+              </div>
+            </div>
+            <div class="col">
+              <div class="inputBox">
+                <input type="text" name="" required="required">
+                <span class="text">Last Name</span>
+                <span class="line"></span>
+              </div>
+            </div>
+          </div>
+          <div class="row100">
+            <div class="col">
+              <div class="inputBox">
+                <input type="text" name="" required="required">
+                <span class="text">Email</span>
+                <span class="line"></span>
+              </div>
+            </div>
+            <div class="col">
+              <div class="inputBox">
+                <input type="text" name="" required="required">
+                <span class="text">Mobile</span>
+                <span class="line"></span>
+              </div>
+            </div>
+          </div>
+          <div class="row100">
+            <div class="col">
+              <div class="inputBox textarea">
+                <textarea required="required"></textarea>
+                <span class="text">Type your message Here...</span>
+                <span class="line"></span>
+              </div>
+            </div>
+          </div>
+          <div class="row100">
+            <div class="col">
+              <input type="submit" value="Send">
+            </div>
           </div>
         </div>
-        <div class="col">
-          <div class="inputBox">
-            <input type="text" name="" required="required">
-            <span class="text">Last Name</span>
-            <span class="line"></span>
+        <div class="col-md-6">
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14614.568570037995!2d90.43504105257912!3d23.68875224140044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9e7d89677bd%3A0x3b5c34ece56ca8e!2sJurain%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1594144011741!5m2!1sen!2sbd"
+              width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+              tabindex="0"></iframe>
           </div>
-        </div>
-      </div>
-      <div class="row100">
-        <div class="col">
-          <div class="inputBox">
-            <input type="text" name="" required="required">
-            <span class="text">Email</span>
-            <span class="line"></span>
-          </div>
-        </div>
-        <div class="col">
-          <div class="inputBox">
-            <input type="text" name="" required="required">
-            <span class="text">Mobile</span>
-            <span class="line"></span>
-          </div>
-        </div>
-      </div>
-      <div class="row100">
-        <div class="col">
-          <div class="inputBox textarea">
-            <textarea required="required"></textarea>
-            <span class="text">Type your message Here...</span>
-            <span class="line"></span>
-          </div>
-        </div>
-      </div>
-      <div class="row100">
-        <div class="col">
-          <input type="submit" value="Send">
         </div>
       </div>
     </div>
